# stock-analyzer

./: .env.local  .gitignore  CLAUDE.md  DEPLOYMENT_STATUS.md  Dockerfile.dolt-earnings  Dockerfile.dolt-stocks  FIX_SUMMARY.md  GITHUB_SECRETS.md  Makefile  README.md  UI_IMPLEMENTATION_SUMMARY.md  WORKER_IMPLEMENTATION_SUMMARY.md  docker-compose.yml  example-EODHD-fundamentals-response-AAPL.json  pyproject.toml  tickers.example.txt  tickers.txt
docs/: backfill-guide.md  backfill-uber-with-dolt.md  email-delivery.md  ingest.md  local-setup.md  mvp-product-plan.md  mvp-progress.md  quick-start-uber-backfill.md  setup-cloudflare-r2.md  storage-architecture.md  system-architecture.md  ui-implementation-plan.md  valuation-regime-module.md  worker-implementation-plan.md
scripts/: README.md  add_stocks_to_watchlist.py  backfill_features_historical.py  backfill_from_dolt.py  backfill_from_tickers_file.py  backfill_uber.py  check_recent_price_data.py  compute_metrics.py  debug_date_issue.py  get_watchlist_tickers.py  ingest_prices.py  process_backfill_queue.py  test_ingest_and_read.py  test_mock_pipeline.py  test_r2_connection.py  test_send_email.py  test_signals.py  verify_data_availability.py
src/: config.py  reader.py
supabase/: kong.yml
tests/: test_backfill.py  test_email_delivery.py  test_features_backfill.py  test_templates.py  test_valuation_regime.py
web/: .env.example  .env.local.example  CLOUDFLARE_DEPLOYMENT.md  README.md  deploy.sh  next.config.ts  package-lock.json  package.json  wrangler.toml
worker/: .dev.vars.example  README.md  package-lock.json  (+5 more)
(+81 files in other folders)
