[project]
name = "stock-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "eodhd>=1.0.32",
    "boto3>=1.34.0",
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
]
